--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -56,3 +56,28 @@ html{
 .pagination{
   text-align: center;
 }
+
+.contents_row{
+  width: 500px;
+  margin: 0 auto;
+}
+
+.field{
+  width: 500px;
+  margin: 0 auto;
+}
+
+.title{
+  text-align: center;
+  font-size: 3em;
+}
+
+.actions{
+  text-align: center;
+}
+
+input{
+  width: 100px;
+  height: 50px;
+  background-color: #ff7d6e;
+  }
