--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,6 +2,11 @@
     <% @blogs.each do |blog| %>
       <div class="content_post">
         <%= simple_format(blog.text) %>
+        <span class="name">
+          <a href="">
+            <span>投稿者</span><%= blog.user.nickname %>
+          </a>
+        </span>
       </div>
     <% end %>
   <%= paginate(@blogs) %>
