--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -81,3 +81,12 @@ input{
   height: 50px;
   background-color: #ff7d6e;
   }
+
+.more{
+  width: 50px;
+  height: 30px;
+  background-color: #ff7d6e;
+  color: white;
+  text-align: center;
+  line-height: 30px;
+}
