--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,11 +82,10 @@ input{
   background-color: #ff7d6e;
   }
 
-.more{
-  width: 50px;
-  height: 30px;
-  background-color: #ff7d6e;
-  color: white;
+.more_list{
+  float: right;
   text-align: center;
-  line-height: 30px;
+  width: 50px;
+  background-color: #ff7d6e;
 }
+
