--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,7 +4,10 @@
         <% if user_signed_in? && current_user.id == blog.user_id %>
           <div class="more">
             <ul class="more_list">
-              <li>
+              <li class="box1">
+                <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get %>
+              </li>
+              <li class="box2">
                 <%= link_to '削除', "/blogs/#{blog.id}", method: :delete %>
               </li>
             </ul>
