--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,25 +1,6 @@
 <div class="contents">
     <% @blogs.each do |blog| %>
-      <div class="content_post">
-        <% if user_signed_in? && current_user.id == blog.user_id %>
-          <div class="more">
-            <ul class="more_list">
-              <li class="box1">
-                <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get %>
-              </li>
-              <li class="box2">
-                <%= link_to '削除', "/blogs/#{blog.id}", method: :delete %>
-              </li>
-            </ul>
-          </div>
-        <% end %>
-        <%= simple_format(blog.text) %>
-        <span class="name">
-          <a href="">
-            <span>投稿者</span><%= blog.user.nickname %>
-          </a>
-        </span>
-      </div>
+      <%= render partial: "blog", locals: { blog: blog } %>
     <% end %>
   <%= paginate(@blogs) %>
 </div>
