--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,7 @@
 <div class="contents" >
     <p><%= @nickname %>さんの投稿一覧</p>
     <% @blogs.each do |blog| %>
-      <div class="content_post" >
-        <%= simple_format(blog.text) %>
-        <span class="name">
-          <a href="">
-            <span>投稿者</span><%= blog.user.nickname %>
-          </a>
-        </span>
-      </div>
+      <%= render partial: "blog", locals: { blog: blog } %>
     <% end %>
     <%= paginate(@blogs) %>
   </div>
