--- a/app/views/users/_blog.html.erb
+++ b/app/views/users/_blog.html.erb
@@ -3,10 +3,10 @@
       <div class="more">
         <ul class="more_list">
           <li class="box1">
-            <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get %>
+            <%= link_to '編集', "/blogs/#{blog.id}/edit", method: :get, style: "color:white;" %>
           </li>
           <li class="box2">
-            <%= link_to '削除', "/blogs/#{blog.id}", method: :delete %>
+            <%= link_to '削除', "/blogs/#{blog.id}", method: :delete, style: "color:white;" %>
           </li>
         </ul>
       </div>
