--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -13,8 +13,7 @@
     <% end %>
     <%= simple_format(blog.text) %>
     <span class="name">
-      <a href="">
-        <span>投稿者</span><%= blog.user.nickname%>
+        <span>投稿者 :</span><%= blog.user.nickname%>
       </a>
     </span>
 </div>
