--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -21,6 +21,12 @@ html{
   margin: 0 auto;
 }
 
+.main_title{
+  text-align: center;
+  font-size: 1.5em;
+  border-bottom: solid 3px #ff7d6e;
+}
+
 .btn{
   background-color: #ff7d6e;
   color: white;
