--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,4 +1,7 @@
 <div class="content_post">
+ <div class="main_title">
+　<caption><%= blog.title %></caption>
+ </div>
     <% if user_signed_in? && current_user.id == blog.user_id %>
       <div class="more">
         <ul class="more_list">
