--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -3,7 +3,8 @@
       <h3>
         編集する
       </h3>
-      <textarea class="edit_box" cols="30" name="text" placeholder="text" rows="10"><%= @blog.text %></textarea>
-      <input type="submit" value="SENT">
-    <% end %>
+      <textarea name="title" placeholder="title"></textarea>
+      <textarea cols="30" name="text" placeholder="text" rows="10" class="input_box"></textarea>
+      <input type="submit" value="SENT" class="submit_btn">
+      <% end %>
   </div>
