--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -3,6 +3,9 @@
     <h3>
       投稿する
     </h3>
+    題名
+    <textarea name="title" placeholder="title"></textarea>
+    内容
     <textarea cols="30" name="text" placeholder="text" rows="10" class="input_box"></textarea>
     <input type="submit" value="SENT" class="submit_btn">
   <% end %>
