--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -4,6 +4,7 @@
         編集する
       </h3>
       <textarea name="title" placeholder="title"></textarea>
+      <input placeholder="Image Url" type="text" name="image">
       <textarea cols="30" name="text" placeholder="text" rows="10" class="input_box"></textarea>
       <input type="submit" value="SENT" class="submit_btn">
       <% end %>
